syntax = "proto3";

package test.deprecated;

message TestMessage { string message = 1 [ deprecated = true ]; }

service TestService {
  rpc test(TestMessage) returns (TestMessage) { option deprecated = true; };
}
